# merchandise_store

./: .env.example  Dockerfile.bot  Dockerfile.celery_django  Dockerfile.django  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
nginx_config/conf.d/: default.conf
src/admin_panel/: config.py  manage.py
src/admin_panel/clients/: admin.py  apps.py  models.py  tasks.py
src/admin_panel/clients/migrations/: 0001_initial.py  0002_newsletter_alter_client_id.py  0003_broadcast_category_faqentry_order_orderitem_product_and_more.py  0004_alter_usercartitem_product.py  0005_alter_usercartitem_product.py  0006_channel.py  0007_alter_category_name_alter_category_parent_and_more.py  0008_alter_product_category.py  0009_alter_category_name_alter_category_parent_and_more.py  0010_alter_order_user.py  0011_alter_order_user.py  0012_alter_order_user.py
src/admin_panel/clients/templates/admin/: newsletter_action_intermediate.html
src/admin_panel/merchandise_store/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
src/bot/: config.py  main.py  middlewares.py  sender.py  tasks.py
src/bot/handlers/: __init__.py  cart.py  catalog.py  common.py  faq.py  main_menu.py  private.py
src/bot/kbd/: inline.py
src/bot/misc/: paginator.py  utils.py
